objects/SDO_Service_Custom_Debit_Card__c.object
<CustomObject>
    <description>What: request from the platform team for flows using lightning components</description>
    <fields>
        <fullName>Business_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Astro Yetti</fullName>
                    <default>true</default>
                    <label>Astro Yetti</label>
                </value>
                <value>
                    <fullName>Ohana</fullName>
                </value>
                <value>
                    <fullName>Friends</fullName>
                </value>
                <value>
                    <fullName>Adventures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Custom_Debit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FriendlyName__c</fullName>
        <label>Friendly Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;In Progress&quot;</defaultValue>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Credit Account</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Custom Debit Card Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>